# Particle_Simulation

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
include/: ParticleManager.hpp
include/core/: ParticleManager.hpp
src/: ParticleManager.cpp  main.cpp
src/__tests__/: ParticleManagerTest.cpp
src/core/: ParticleManager.cpp
